--- a/css/style.css
+++ b/css/style.css
@@ -229,26 +229,14 @@ section.card-section .card {
     width: 100%;
 }
 
-
-section.card-section .card:hover {
-   
-    border: 1px solid #FFFFFF4D;
- 
-}
-
-/* .card:hover {
-
-    border: double 2px transparent;
-    border-radius: 80px;
-    display:inline-block;
-    background-image: radial-gradient(circle at top left, #f00,#3020ff) !important;
+.card.item:hover {
+    border: 1px solid #130c18;
+    border-radius: 20px;
+    display: inline-block;
+    background-image: linear-gradient(#130c18, #130c18), radial-gradient(circle at top left, #EC146C,#8A3AC8);
     background-origin: border-box;
     background-clip: content-box, border-box;
-    background-color: transparent ;
-
- } */
-
-
+}
 
 img.card-img {
     margin: 0px;
@@ -299,7 +287,6 @@ section.how-it-work-section p {
     color: #666666;
     font-size: 16px;
 }
-
 
 .learn-more-section {
     height: auto;
@@ -359,11 +346,31 @@ footer ul {
     width: 460px !important;
     max-width: 460px;
 }
+
 section.card-section .card {
     max-width: 100%;
     width: 460px;
     height: 677px;
 }
+
+.swiper-section {
+    position: relative;
+}
+.glow {
+    background: url(../images/glow.png) no-repeat;
+    position: absolute;
+    top: -230px;
+    width: 350px;
+    height: 200px;
+    z-index: -1;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    padding: 370px;
+    background-size: contain;
+}
+/*media query*/
+
 
 @media screen and (max-width: 1200px) {
     .container {
@@ -391,6 +398,7 @@ section.card-section .card {
         font-weight: 400;
         line-height: normal;
     }
+
     .heading-section .list-section ul {
         max-width: 70%;
         margin: 0 auto;
@@ -447,7 +455,7 @@ section.card-section .card {
 
 @media screen and (max-width: 767px) {
 
- 
+
     section.card-section .cards {
         gap: 10px;
     }
@@ -473,7 +481,7 @@ section.card-section .card {
     }
 
     section.buy-win-prizes-section .col-lg-7.col-md-6.col-sm-12 {
-        margin: 70px auto;
+        margin: 0px auto 50px;
     }
 
     .heading {
@@ -513,21 +521,50 @@ section.card-section .card {
         padding: 20px;
     }
 
-    section.heading-section,  section.swiper-section, section.more-info, section.buy-win-prizes-section {
+    section.heading-section, section.swiper-section, section.more-info, section.buy-win-prizes-section {
         padding: 0 20px;
     }
+    .glow {
+        top: -160px;
+        max-width: 350px;
+        padding: 50%;
+     }
+
+
+    section.buy-win-prizes-section .row.dflex {
+        flex-direction: column-reverse;
+    }
+
+    .swiper-container {
+        
+        padding-bottom: 10px;
+    }
+
+    button.btn-more-info {
+        max-width: 100%;
+        margin-bottom: 30px;
+    }
+
 }
 
 
 @media screen and (max-width: 640px) {
 
+    .owl-carousel .owl-stage {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        text-align: center;
+    }
+    
     section.card-section .card {
         max-width: 100%;
     }
 
     .heading-section .list-section ul {
         max-width: 88%;
-     }
+    }
 
     a.navbar-brand img {
         width: 80%;
@@ -570,7 +607,7 @@ section.card-section .card {
         text-align: center;
     }
 
- 
+
     .swiper-container {
         padding-top: 20px;
     }
@@ -628,53 +665,61 @@ section.card-section .card {
     }
 
     section.card-section .card {
-       
+
         width: 351px;
         height: 677px;
         margin: 0 auto;
     }
+
     button.btn-more-info {
         max-width: 100%;
- 
+
     }
+
     .mr-30 {
         margin-right: 0;
     }
+
     .owl-item {
         width: 50% !important;
         max-width: 563px;
         margin: 0 auto;
     }
- 
+
 }
 
 
 @media screen and (max-width: 580px) {
- 
+
     section.learn-more-section p {
         font-size: 14px;
     }
+
     section.card-section .card p.card-text {
- 
+
         font-size: 18px;
- 
+
     }
+
     .more-info h4 {
         text-align: center;
         font-size: 14px;
     }
+
     h4 {
         font-size: 14px;
         text-align: center;
     }
+
     .picture {
         max-width: 210px;
         width: 100%;
         height: 330px;
         overflow: hidden;
     }
+
     section.card-section .card ul li {
-       
+
         margin-bottom: 14px;
         font-size: 14px;
         font-weight: 100;
